# ECGR-4181-CPU-Simulation

./: Assignment3.cpp  CMakeLists.txt  CPU.cpp  CPU.h  ECGR-4181-CPU-Simulation.sln  ECGR-4181-CPU-Simulation.vcxproj  ECGR-4181-CPU-Simulation.vcxproj.filters  NativeRecommendedRules.ruleset  README.md  System.cpp  System.h  main.cpp
.github/workflows/: msvc-analysis.yml
Data-Handler/: Data.cpp  Data.h  Event.h  Instruction.cpp  Instruction.h  Wire.cpp  Wire.h
Diagrams/: Diagram Legend.txt
Functional-Blocks/ADDER/: Adder.cpp  Adder.h
Functional-Blocks/ALU/: ALU.cpp  ALU.h
Functional-Blocks/BUSARBITER/: BusArbiter.cpp  BusArbiter.h
Functional-Blocks/CACHE/: LevelOneCache.cpp  LevelOneCache.h
Functional-Blocks/DATAMEMORY/: DataMemory.cpp  DataMemory.h
Functional-Blocks/DECODER/: Control-Line-Meaning.txt  Decoder.cpp  Decoder.h
Functional-Blocks/EXTEND/: Extend.cpp  Extend.h  SignExtend.cpp  SignExtend.h  ZeroExtend.cpp  ZeroExtend.h
Functional-Blocks/MEMORY/: Memory.cpp  Memory.h
Functional-Blocks/MUX/: Mux2to1.cpp  Mux2to1.h  Mux4to1.cpp  Mux4to1.h
Functional-Blocks/PIPELINEREGISTERS/: PipelineRegisters.cpp  PipelineRegisters.h
Functional-Blocks/PROGRAMCOUNTER/: ProgramCounter.cpp  ProgramCounter.h
Functional-Blocks/REGISTERFILE/: RegisterFile.cpp  RegisterFile.h
Functional-Blocks/SHIFT/: ShiftLeft.cpp  ShiftLeft.h
